[gd_scene format=3 uid="uid://cyy8rpxm4r2xv"]

[ext_resource type="Script" uid="uid://cr15vpm2nn5oa" path="res://src/map/treasure_hunt.gd" id="1"]
[ext_resource type="Script" uid="uid://bwg8w5ie6k46f" path="res://src/map/grid_map.gd" id="2"]
[ext_resource type="Script" uid="uid://dery257rbklnl" path="res://src/map/grid_visual.gd" id="3"]

[node name="TreasureHunt" type="Node2D"]
script = ExtResource("1")

[node name="GameGrid" type="Node" parent="."]
script = ExtResource("2")

[node name="GridVisual" type="Node2D" parent="."]
script = ExtResource("3")
